[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.1"
derive-getters = "0.2.0"
thiserror = "1.0"
peg = "0.8.0"
common-proc-macro = { path = "../common-proc-macro" }
